--- a/services/auth-service/AuthService/appsettings.json
+++ b/services/auth-service/AuthService/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=smartcity360;Username=postgres;Password=postgres"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
