Added User Authentication services from .NET using JWT

--- a/services/auth-service/AuthService/appsettings.json
+++ b/services/auth-service/AuthService/appsettings.json
@@ -2,11 +2,16 @@
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=smartcity360;Username=postgres;Password=postgres"
     },
+    "JwtSettings": {
+        "SecretKey": "SmartCity360-Super-Secret-Key-For-JWT-Token-Generation-2024",
+        "Issuer": "SmartCity360-AuthService",
+        "Audience": "SmartCity360-Users",
+        "ExpirationHours": 24
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning",
-            "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+            "Microsoft.AspNetCore": "Warning"
         }
     },
     "AllowedHosts": "*"
