Connect AuthServices with the AdminServices, change portnumers.

--- a/services/auth-service/AuthService/appsettings.json
+++ b/services/auth-service/AuthService/appsettings.json
@@ -1,12 +1,12 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=smartcity360;Username=postgres;Password=postgres"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=smartcity360_auth;Username=postgres;Password=postgres"
     },
     "JwtSettings": {
-        "SecretKey": "SmartCity360-Super-Secret-Key-For-JWT-Token-Generation-2024",
-        "Issuer": "SmartCity360-AuthService",
+        "SecretKey": "SmartCity360-SuperSecretKey-AdminService-2024",
+        "Issuer": "SmartCity360",
         "Audience": "SmartCity360-Users",
-        "ExpirationHours": 24
+        "ExpiryMinutes": 60
     },
     "Logging": {
         "LogLevel": {
