JWt tokenization an authorization has been added into auth-services

--- a/services/auth-service/AuthService/appsettings.json
+++ b/services/auth-service/AuthService/appsettings.json
@@ -3,10 +3,10 @@
         "DefaultConnection": "Host=localhost;Port=5432;Database=smartcity360_auth;Username=postgres;Password=postgres"
     },
     "JwtSettings": {
-        "SecretKey": "SmartCity360-SuperSecretKey-AdminService-2024",
-        "Issuer": "SmartCity360",
-        "Audience": "SmartCity360-Users",
-        "ExpiryMinutes": 60
+        "SecretKey": "SmartCity360-Super-Secret-Key-For-JWT-Token-Generation-2025",
+        "Issuer": "SmartCity360.AuthService",
+        "Audience": "SmartCity360.API",
+        "ExpirationInMinutes": 60
     },
     "Logging": {
         "LogLevel": {
