--- a/services/admin-service/AdminService/appsettings.json
+++ b/services/admin-service/AdminService/appsettings.json
@@ -5,6 +5,12 @@
     "ServiceUrls": {
         "AuthService": "https://localhost:5000"
     },
+    "JwtSettings": {
+        "SecretKey": "SmartCity360-Super-Secret-Key-For-JWT-Token-Generation-2025",
+        "Issuer": "SmartCity360.AuthService",
+        "Audience": "SmartCity360.API",
+        "ExpirationInMinutes": 60
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
